@@ -129,7 +129,6 @@ void populate_varlist (void);
 void clear_varlist (GtkWidget *widget);
 void mdata_select_last_var (void);
 int gui_restore_sample (double ***pZ, DATAINFO *pdinfo);
-void force_language (int lang);
 
 /* functions defined in files other than gretl.c */
 void about_dialog (void);
